--- a/mindorks_viper/Code/Interactor/Interactor.swift.liquid
+++ b/mindorks_viper/Code/Interactor/Interactor.swift.liquid
@@ -6,7 +6,7 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-class {{ module_info.name }}Interactor: {{ module_info.name }}InteractorInput {
+class {{ module_info.name }}Interactor: {{ module_info.name }}InteractorInputProtocol {
 
     weak var presenter: {{ module_info.name }}InteractorOutputProtocol?
     var localDatamanager: {{ module_info.name }}LocalDataManagerInputProtocol?
