Adds DisplayData type that manages data for View, adds force unwrap in type declarations.

--- a/mindorks_viper/Code/Presenter/Presenter.swift.liquid
+++ b/mindorks_viper/Code/Presenter/Presenter.swift.liquid
@@ -7,9 +7,9 @@
 //
 
 class {{ module_info.name }}Presenter: {{ module_info.name }}PresenterProtocol {
-    weak var view: {{ module_info.name }}ViewProtocol?
-    var interactor: {{ module_info.name }}InteractorInputProtocol?
-    var wireFrame: {{ module_info.name }}WireFrameProtocol?
+    weak var view: {{ module_info.name }}ViewProtocol!
+    var interactor: {{ module_info.name }}InteractorInputProtocol!
+    var wireFrame: {{ module_info.name }}WireFrameProtocol!
     
     func viewDidLoad() {
         
