--- a/mindorks_viper/Code/View/DisplayData/DisplayData.swift.liquid
+++ b/mindorks_viper/Code/View/DisplayData/DisplayData.swift.liquid
@@ -6,7 +6,6 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-class {{ module_info.name }}Interactor: {{ module_info.name }}InteractorInputProtocol {
-
-    weak var presenter: {{ module_info.name }}InteractorOutputProtocol!
+class {{ module_info.name }}DisplayData {
+	
 }
