--- a/mindorks_viper/Code/View/View.swift.liquid
+++ b/mindorks_viper/Code/View/View.swift.liquid
@@ -10,7 +10,8 @@ import UIKit
 
 class {{ module_info.name }}View: UIViewController {
     
-    var presenter: {{ module_info.name }}PresenterProtocol?
+    var presenter: {{ module_info.name }}PresenterProtocol!
+    var displayData: {{ module_info.name }}DisplayData!
     
     override func viewDidLoad() {
         super.viewDidLoad()
