--- a/mindorks_viper/Code/Protocols/Protocols.swift.liquid
+++ b/mindorks_viper/Code/Protocols/Protocols.swift.liquid
@@ -9,7 +9,7 @@
 import UIKit
 
 protocol {{ module_info.name }}ViewProtocol: class {
-    var presenter: {{ module_info.name }}PresenterProtocol? { get set }
+    var presenter: {{ module_info.name }}PresenterProtocol! { get set }
 }
 
 protocol {{ module_info.name }}WireFrameProtocol: class {
@@ -17,9 +17,9 @@ protocol {{ module_info.name }}WireFrameProtocol: class {
 }
 
 protocol {{ module_info.name }}PresenterProtocol: class {
-    var view: {{ module_info.name }}ViewProtocol? { get set }
-    var interactor: {{ module_info.name }}InteractorInputProtocol? { get set }
-    var wireFrame: {{ module_info.name }}WireFrameProtocol? { get set }
+    var view: {{ module_info.name }}ViewProtocol! { get set }
+    var interactor: {{ module_info.name }}InteractorInputProtocol! { get set }
+    var wireFrame: {{ module_info.name }}WireFrameProtocol! { get set }
     
     // VIEW -> PRESENTER
     func viewDidLoad()
@@ -29,9 +29,7 @@ protocol {{ module_info.name }}InteractorOutputProtocol: class {
 }
 
 protocol {{ module_info.name }}InteractorInputProtocol: class {
-    var presenter: {{ module_info.name }}InteractorOutputProtocol? { get set }
-    var localDatamanager: {{ module_info.name }}LocalDataManagerInputProtocol? { get set }
-    var remoteDatamanager: {{ module_info.name }}RemoteDataManagerInputProtocol? { get set }
+    var presenter: {{ module_info.name }}InteractorOutputProtocol! { get set }
 }
 
 protocol {{ module_info.name }}DataManagerInputProtocol: class {
