--- a/mindorks_viper/Code/WireFrame/WireFrame.swift.liquid
+++ b/mindorks_viper/Code/WireFrame/WireFrame.swift.liquid
@@ -11,24 +11,30 @@ import UIKit
 class {{ module_info.name }}WireFrame: {{ module_info.name }}WireFrameProtocol {
     
     fileprivate class func setupView(view: {{ module_info.name }}View) {
+    	let displayData = {{ module_info.name }}DisplayData()
         let presenter: {{ module_info.name }}PresenterProtocol & {{ module_info.name }}InteractorOutputProtocol = {{ module_info.name }}Presenter()
-        let interactor: {{ module_info.name }}InteractorInputProtocol & {{ module_info.name }}RemoteDataManagerOutputProtocol = {{ module_info.name }}Interactor()
-        let localDataManager: {{ module_info.name }}LocalDataManagerInputProtocol = {{ module_info.name }}LocalDataManager()
-        let remoteDataManager: {{ module_info.name }}RemoteDataManagerInputProtocol = {{ module_info.name }}RemoteDataManager()
+        let interactor: {{ module_info.name }}InteractorInputProtocol = {{ module_info.name }}Interactor()
         let wireFrame: {{ module_info.name }}WireFrameProtocol = {{ module_info.name }}WireFrame()
         
         view.presenter = presenter
+        view.displayData = displayData
+
         presenter.view = view
         presenter.wireFrame = wireFrame
         presenter.interactor = interactor
+
         interactor.presenter = presenter
-        interactor.localDatamanager = localDataManager
-        interactor.remoteDatamanager = remoteDataManager
-        remoteDataManager.remoteRequestHandler = interactor
     }
     
     class func create{{ module_info.name }}Module() -> UIViewController {
         // TODO: Instantiate and setup {{ module_info.name }}View here 
     }
     
+}
+
+// TODO: Remove if this module doesn't have its own Storyboard
+extension UIStoryboard {
+    class var {{ module_info.name }}: UIStoryboard {
+        return UIStoryboard(name: "{{ module_info.name }}", bundle: nil)
+    }
 }
