Adds genereation Storyboard file in mindorks_viper module, renames DataDisplay to DataDisplayManager class.

--- a/mindorks_viper/Code/View/DisplayData/DisplayDataManager.swift.liquid
+++ b/mindorks_viper/Code/View/DisplayData/DisplayDataManager.swift.liquid
@@ -6,6 +6,6 @@
 //  Copyright © {{ year }} {{ developer.company }}. All rights reserved.
 //
 
-class {{ module_info.name }}DisplayData {
+class {{ module_info.name }}DisplayDataManager {
 	
 }
