Fixes storyboard id to be with View postfix

--- a/mindorks_viper/Code/Storyboard/Storyboard.storyboard.liquid
+++ b/mindorks_viper/Code/Storyboard/Storyboard.storyboard.liquid
@@ -6,7 +6,7 @@
     <scenes>
         <scene sceneID="htw-l1-ahc">
             <objects>
-                <viewController storyboardIdentifier="{{ module_info.name }}" id="xqD-av-Raz" customClass="{{ module_info.name }}View" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="{{ module_info.name }}View" id="xqD-av-Raz" customClass="{{ module_info.name }}View" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="EcR-ye-kTk"/>
                         <viewControllerLayoutGuide type="bottom" id="vb6-4r-Epx"/>
